<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:background="#F4EDED">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp130"
        android:layout_marginHorizontal="@dimen/dp60"
        android:text="@string/Congrats"
        android:textColor="#6C065E"
        android:fontFamily="@font/calistoga"
        android:textSize="@dimen/sp30"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp130"
        android:textSize="@dimen/sp30"
        android:paddingTop="@dimen/dp50"
        android:hint="@string/User"
        android:gravity="center"
        android:fontFamily="@font/calistoga"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp130"
        android:textSize="@dimen/sp30"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/contact"
        android:gravity="center"
        android:fontFamily="@font/calistoga"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etcollege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp130"
        android:textSize="@dimen/sp30"
        android:hint="@string/college"
        android:gravity="center"
        android:fontFamily="@font/calistoga"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp130"
        android:textSize="@dimen/sp30"
        android:hint="@string/email"
        android:gravity="center"
        android:fontFamily="@font/calistoga"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etstudy"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp130"
        android:fontFamily="@font/calistoga"
        android:gravity="center"
        android:hint="@string/studyField"
        android:textColor="@color/black"
        android:textSize="@dimen/sp30" />


</LinearLayout>